--- a/main.yml
+++ b/main.yml
@@ -63,3 +63,4 @@
     - tools/programming/java/springtoolsuite
     - tools/programming/java/gradle
     - tools/programming/java/maven
+    - tools/programming/javascript/nodejs
