--- a/roles/tools/source-control/git/tasks/ubuntu.yml
+++ b/roles/tools/source-control/git/tasks/ubuntu.yml
@@ -25,4 +25,4 @@
     scope: global
   with_items:
     - { name: "user.name", value: "{{ git_user_name }}" }
-    - { name: "user.email", value: "{{ git_user_config }}" }
+    - { name: "user.email", value: "{{ git_user_email }}" }
