--- a/main.example.yml
+++ b/main.example.yml
@@ -66,3 +66,5 @@
     - tools/programming/java/gradle
     - tools/programming/java/maven
     - tools/programming/javascript/nodejs
+
+    - tools/messaging/slack
