Fix pyenv install on mac

--- a/roles/tools/programming/python/pyenv/tasks/mac.yml
+++ b/roles/tools/programming/python/pyenv/tasks/mac.yml
@@ -21,4 +21,4 @@
 
 - name: Install python versions
   shell: CFLAGS="-I$(xcrun --show-sdk-path)/usr/include" pyenv install -s {{ item }}
-  with_items: {{ pyenv.python_versions }}
+  with_items: "{{ pyenv.python_versions }}"
