--- a/roles/tools/source-control/git/tasks/mac.yml
+++ b/roles/tools/source-control/git/tasks/mac.yml
@@ -25,4 +25,5 @@
     - { name: "alias.lgf", value:  'log --no-merges --date-order --pretty=format:"%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an - %ae>%Creset" --abbrev-commit --date=relative' }
     - { name: "alias.lg", value:  "log --graph --date-order --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an - %ae>%Creset' --abbrev-commit --date=relative" }
     - { name: "branch.autoSetupMerge", value: "always" }
-    - { name: "core.editor", value: "vim -f"}
+    - { name: "core.editor", value: "vim -f" }
+    - { name: "pull.rebase", value: "false" }
